--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>ClusterToken - Smart mining with smart rewards.</title>
 	
 	<!-- Royal Preloader CSS -->
-	<link href="css/royal_preloader.css" rel="stylesheet">
+	<link href="assets/css/royal_preloader.css" rel="stylesheet">
 
 	<!-- jQuery Files -->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
