--- a/index.html
+++ b/index.html
@@ -290,14 +290,14 @@
 			<div class="row mb30">
 				<div class="col-sm-9 leftReveal">
 					<h5 class="heading-1 mb20">Why?</h5>
-					<p class="lead no-margin">To have a better understanding on ClusterToken and it's functions, we strongly advice anyone to read trough our <a href="#">whitepaper</a>.
+					<p class="lead no-margin">To have a better understanding on ClusterToken and it's functions, we strongly advice anyone to read trough our <a href="https://github.com/clustertoken/clustertoken/blob/master/docs/WhitePaper.md">whitepaper</a>.
 					Our whitepaper is user friendly and houses all the technical data and details about ClusterToken.
 				</div><!-- /.column -->
 				<div class="col-sm-3 mt30-xs rightReveal">
 					<h5 class="heading-1 mb20">Important links</h5>
-					<p class="no-margin text-small"><a href="#">Read the whitepaper</a></p>
+					<p class="no-margin text-small"><a href="https://github.com/clustertoken/clustertoken/blob/master/docs/WhitePaper.md">Read the whitepaper</a></p>
 					<p class="no-margin text-small"><a href="#">See the blockchain explorer</a></p>
-					<p class="no-margin text-small"><a href="#">Go to our Github to review the code</a></p>
+					<p class="no-margin text-small"><a href="https://github.com/clustertoken/clustertoken/">Go to our Github to review the code</a></p>
 				</div><!-- /.column -->
 			</div><!-- /.row -->
 			<div class="row">
@@ -324,7 +324,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 topReveal">
 					<div class="team-member-box">
 						<h3>Michael</h3>
-						<p class="mb20">CEO</p>
+						<p class="mb20">Lead developer</p>
 						<div class="team-image-wrapper">
 							<span class="team-image-hover">
 								<span class="team-hover-content">
@@ -554,7 +554,6 @@
 	</section><!-- /.section -->
 	<!-- End Contact -->
 
-
 	<!-- Begin Footer -->
 	<footer class="footer-padding">
 		<div class="container">
@@ -562,7 +561,7 @@
 				<div class="col-sm-8 col-sm-offset-2 text-center">
 					<img src="/assets/images/cluster-outline-black.png" alt="logo">
 					<h2 class="theme-title">CLUSTER<span class="theme-title-smaller">token</span></h2>
-					<a href="#"><span class="ion-social-twitter social-icons-dark-hover mr15"></span></a>
+					<a href="https://twitter.com/ClusterToken"><span class="ion-social-twitter social-icons-dark-hover mr15"></span></a>
 	                <a href="#"><span class="ion-social-facebook social-icons-dark-hover mr15"></span></a>
 	                <a href="#"><span class="ion-social-googleplus-outline social-icons-dark-hover"></span></a>
 				</div>
