--- a/index.html
+++ b/index.html
@@ -257,10 +257,37 @@
 						<span class="pe-7s-info services-icon"></span>
 						<h3 class="service-name">2. Ethereum wallet (MIST)</h3>
 						<p class="text-small">MIST is the official Ethereum wallet. This needs installation on your system and may take up some time.</p>
-						<button type="button" class="btn btn-default mt10" data-toggle="modal" data-target="#item2-services">Quick instructions</button>
+						<button type="button" class="btn btn-default mt10" data-toggle="modal" data-target="#mist-quicks">Quick instructions</button>
 						<button type="button" class="btn btn-default mt10" data-toggle="modal" data-target="#item2-services">Detailed instructions</button>
 					</div>
 				</div><!-- /.column -->	
+				<!-- Item 1 Modal -->
+				<div class="modal fade" id="mist-quicks" tabindex="-1" role="dialog">
+				    <div class="modal-dialog">
+				        <div class="modal-content">
+				            <div class="modal-header">
+				                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="ion-ios-close-empty"></span>
+				                </button>
+				                <span class="pe-7s-info services-icon-2"></span>
+				                <h4 class="service-title">Quick instructions.</h4>
+				            </div>
+				            <div class="modal-body">
+							<span class="pe-7s-attention services-icon" style="color: red"></span>
+							<h4 class="service-name"><strong>SECURITY CONSIDERATIONS</strong></h4>
+							<p class="text-small">Use <strong>only</strong> the contract address published on our official channels and website..</p>
+							<p class="text-small"><strong>Never</strong> click on any external links to visit MyEtherWallet.com.</p>
+							<p class="text-small"><strong>Due diligence</strong> is required when handling the private keys of your wallet.</p>
+							<p class="text-small"><strong>Never</strong> send funds from exchanges or third party wallets that don't support <strong>ERC20 tokens.</strong></p>
+							<p class="text-small">You <strong>must</strong> be the owner of your wallet and in control of your personal <strong>private keys</strong> to get tokens.</p>
+								<h5 class="heading-1 modal-heading mb20">How to get ClusterToken?</h5>
+				                <p class="">Sorry, we're still building this part! Please use the MyEtherWallet guide until we published the guide.</p>
+								<p>Click <a href="/get-mew.html">this link</a> for detailed instructions.</p>
+				                </div>
+				        </div><!-- /.modal-content -->
+				    </div><!-- /.modal-dialog -->
+				</div><!-- /.modal -->
+
+				
 	<!-- Item 3 -->
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 mt30">
 					<div class="services-box leftReveal">
