--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 						<h3 class="service-name">2. Ethereum wallet (MIST)</h3>
 						<p class="text-small">MIST is the official Ethereum wallet. This needs installation on your system and may take up some time.</p>
 						<button type="button" class="btn btn-default mt10" data-toggle="modal" data-target="#mist-quicks">Quick instructions</button>
-						<button type="button" class="btn btn-default mt10" data-toggle="modal" data-target="#item2-services">Detailed instructions</button>
+						<button type="button" class="btn btn-default mt10" data-toggle="modal" data-target="#mist-quicks">Detailed instructions</button>
 					</div>
 				</div><!-- /.column -->	
 				<!-- Item 1 Modal -->
@@ -281,7 +281,7 @@
 							<p class="text-small">You <strong>must</strong> be the owner of your wallet and in control of your personal <strong>private keys</strong> to get tokens.</p>
 								<h5 class="heading-1 modal-heading mb20">How to get ClusterToken?</h5>
 				                <p class="">Sorry, we're still building this part! Please use the MyEtherWallet guide until we published the guide.</p>
-								<p>Click <a href="/get-mew.html">this link</a> for detailed instructions.</p>
+								<p>Click <a href="/get-mew.html">this link</a> for detailed instructions on MyEtherWallet.</p>
 				                </div>
 				        </div><!-- /.modal-content -->
 				    </div><!-- /.modal-dialog -->
