--- a/get-mew.html
+++ b/get-mew.html
@@ -63,13 +63,7 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav navbar-right">
-							<li><a href="#home" data-id="home" class="scroll-link">Home</a></li>
-							<li><a href="#ideology" data-id="ideology" class="scroll-link">Ideology</a></li>
-							<li><a href="#services" data-id="services" class="scroll-link">Get tokens</a></li>
-							<li><a href="#about" data-id="about" class="scroll-link">About</a></li>
-							<li><a href="#team" data-id="team" class="scroll-link">Team</a></li>
-							<li><a href="#timeline" data-id="timeline" class="scroll-link">Timeline</a></li>
-							<li><a href="#contact" data-id="contact" class="scroll-link">Contact</a></li>
+							<li><a href="/" data-id="home" class="scroll-link">Home</a></li>
 						</ul>
 					</div><!-- /.navbar-collapse -->
 				</div>
