--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 						<span class="services-badge badge">New</span>
 						<span class="pe-7s-cart services-icon"></span>
 						<h3 class="service-name">3. Exchanges</h3>
-						<p class="text-small">https://etherdelta.github.io/#0x08fd34559f2ed8585d3810b4d96ab8a05c9f97c5-ETH</p>
+						<p class="text-small"><a href="https://etherdelta.github.io/#0x08fd34559f2ed8585d3810b4d96ab8a05c9f97c5-ETH">EtherDelta decentralized exchange</a></p>
 						<button type="button" class="btn btn-default mt10" data-toggle="modal" data-target="#item4-services">List all exchanges</button>
 					</div>
 				</div><!-- /.column -->	
