--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
 					<img src="/assets/images/cluster-outline.png" alt="logo">
 					<div class="ticker">
 						<h1>Trustless contract</h1>
-						<h1>Self mining token</h1>
-						<h1>Clusterized</h1>
-						<h1>Reward structure</h1>
+						<h1>Ethereum profits</h1>
+						<h1>Masternode function</h1>
 					</div>
 					<hr>
 					<p>ClusterToken is an ERC20 compliant token on the Ethereum blockchain with a unique rewarding system.</p>
